--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: "3.4"
 services:
   dailyfresh:
     image: dailyfresh
-    build:
-      context: .
-      dockerfile: Dockerfile
+    deploy:
+      replicas: 1
     ports:
       - 8000:8000
